--- a/BugTracker/submitBug.html
+++ b/BugTracker/submitBug.html
@@ -44,7 +44,7 @@
                 <tr>
                     <td></td>
                     <td>
-                        <button class="Green" type="submit">Submit</button>
+                        <button class="Green" type="submit">Submit</button> <a href="BugList.html"><button>View All Bugs</button></a>
                     </td>
                 </tr>
             </table>
